[project]
name = "nonebot-plugin-ghtiles"
version = "0.1.1"
description = "A nonebot2 plugin for show GitHub contributions"
readme = "README.md"
requires-python = ">=3.9, <4.0"
dependencies = [
    "nonebot2>=2.2.0",
    "httpx~=0.27",
    "nonebot-plugin-alconna>=0.38.1",
    "nonebot-plugin-apscheduler~=0.4",
    "nonebot-plugin-session~=0.3",
    "nonebot-plugin-localstore~=0.6",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
homepage = "https://github.com/Lipraty/nonebot-plugin-ghtiles"

[tool.nonebot]
adapters = [
    { name = "Satori", module_name = "nonebot.adapters.satori" },
    { name = "OneBot V12", module_name = "nonebot.adapters.onebot.v12" },
    { name = "OneBot V11", module_name = "nonebot.adapters.onebot.v11" },
]
plugins = ["nonebot_plugin_ghtiles"]

[tool.pdm]
[tool.pdm.dev-dependencies]
dev = [
    "nonebot-adapter-satori~=0.10",
    "nonebot-adapter-onebot~=2.4",
    "nonebot2[fastapi,httpx,websockets]~=2.2",
]
[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
